--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
+    "react-canvas-draw": "^1.0.2",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2"
